change base to quay.io/takaomag/netlib-java:release-1.1.2-2018.03.10.05.27